2006-10-04 Carlos Nieves Onega <cnieves@iespana.es>

	* include/struct.h, src/s_toplevel.c:
	Removed the new variable to track wether the main window is maximized
	or not. It's no more necessary due to the patch from Patrick Bernaud.

2006-09-30 Carlos Nieves Onega <cnieves@iespana.es>

	* include/struct.h, src/s_toplevel.c:
	Added a new variable to track wether the main window is maximized
	or not. This is part of the bug #1527465 fix.

2006-09-30 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/a_basic.c: Fixed a memory leak in o_save when saving 
	complex objects.  Not a large leak, but this function gets called
	all the time when recording undo info.  Found using valgrind.

	* src/s_page.c: Added check to fix Bug#1562352 (Gattrib crashes
	doing file-save when no files open)

2006-09-28 Carlos Nieves Onega <cnieves@iespana.es>

	* include/prototype.h, include/struct.h, src/g_smob.c:
	  Added new page smob.
	
2006-09-27 Carlos Nieves Onega <cnieves@iespana.es>

	* configure.ac : Applied patch #1564796 by Cesar Strauss, 
	enabling Cygwin's compilation. Thanks.
	
2006-09-24 Ales Hvezda   <ahvezda@geda.seul.org>

        * AUTHORS: Updated file pointing people at gschem's AUTHOR file 
        as the complete list of authors.  Merged all listed files in this
        file into gschem's file.

2006-09-24 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Tweaked glib detection to not fail ./configure
	when gdlib is not installed.  gdlib is an optional dependancy.

2006-09-24 03:57  Dan McMahill <danmc>

	* configure.ac, libgeda.pc.in: Improve gdlib detection.  Now
	  instead of just dropping gd support if gdlib is not found, have
	  configure error out with a message that tells the user what needs
	  to be fixed or what feature will be missing if --disable-gd is
	  used.

	  Also add a variable to libgeda.pc.in so pkg-config can determine
	  if libgeda was compiled with gdlib support.  This makes
	  determination of this by gschem more robust.
